Bug 78927 - FILESAVE: ods files saved with different Asian font family in the same cell will brake the archive
Summary: FILESAVE: ods files saved with different Asian font family in the same cell w...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.5.1 rc
Hardware: x86-64 (AMD64) Windows (All)
: medium critical
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0.0.beta2 target:4.4.0 tar...
Keywords:
: 81791 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-19 21:26 UTC by Yulin
Modified: 2014-07-26 18:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yulin 2014-05-19 21:26:59 UTC
Version: LibreOfficeDev 4.2.5.0.0 Win-x86 build from May 19.

Reproducing: Create a new ods file with LibreOffice. Inside a cell, type any character and choose one type of font for it. In the same cell, type any east asian character (kanji/hanzi, katakana, hiragana, hangul) and choose a font render other then Microsoft YaHei to render east asian characters, and that is also different from the font of the first typed character. Save the file and close. When you try to open the archive, it will give an error indicating the region of the file that has the problem.
Note: you may have to save the file first, reopen it again and change the east asian character font for another, since LibreOffice defaults east asian characters to be rendered with Microsoft YaHei after they where firstly introduced in the cell and after the file was firstly created.
 
This bug may be related to 77537: bugs.freedesktop.org/show_bug.cgi?id=77537
In LibreOffice 4.2.4 and prior versions, trying to using different font types in the same cell of an ods file would result in bug 77537, where cells from the file would retain only one of the fonts selected after it was saved.
Comment 1 Yulin 2014-05-25 14:42:58 UTC
Bug is persistent on version 4.3.0.0 beta1.
Comment 2 Yulin 2014-05-29 04:50:07 UTC
To clarify: font render - font family


The bug is persistent on LibreOfficeDev version 4.2.6.0.0+
Build ID: 20857b5d7536b3fcafa16ca6527ba459032933d7, Win-x86, May 28.


To reproduce the bug:

1. Open LibreOffice Calc and create a new .ods file.
2. Inside one of the cells, type an east asian character and any other character. Example: δΈ€ and 1.
3. Save and close the file.
4. Reopen again. The font family of the east asian character will be Microsoft YaHei.
5. Change the font family of the east asian character for another one that isn't Microsoft YaHei. Only do this with the east asian character and leave the other character unaltered.
6. Save and close the file.

Trying to open the file will give a error message, pointing the section of it that presents the issue.


Checked it as NEW, but need confirmation.
Comment 3 Kohei Yoshida 2014-05-31 01:48:16 UTC
I'll take this.
Comment 4 Commit Notification 2014-05-31 02:05:37 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f47e11a050b5e9c40893cc692cf645aae55b654f&h=libreoffice-4-3

fdo#78927: Use different XML attribute names for asian and complex fonts.


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-05-31 02:05:50 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b35c7ea4f7fe1473dbe08ab93b7259403b290ff

fdo#78927: Use different XML attribute names for asian and complex fonts.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Kohei Yoshida 2014-05-31 02:07:23 UTC
4.2 backport: https://gerrit.libreoffice.org/9588
Comment 7 Commit Notification 2014-05-31 16:39:31 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=282227a81df90dfe11f0b57a4d7558d7faa56836&h=libreoffice-4-2

fdo#78927: Use different XML attribute names for asian and complex fonts.


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Kohei Yoshida 2014-05-31 17:00:13 UTC
Fixed in 4.2.
Comment 9 Yulin 2014-05-31 18:31:02 UTC
Thanks. It seems to be fixed. Tested it with version 4.4.0.0.alpha0+ Build ID: 1b35c7ea4f7fe1473dbe08ab93b7259403b290ff, Win-x86, May 31, and its working properly.
Comment 10 Commit Notification 2014-06-03 08:31:11 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c2f1677aa4048f0ce2a744bb28d8cd8774216e7&h=libreoffice-4-2-5

fdo#78927: Use different XML attribute names for asian and complex fonts.


It will be available already in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Kohei Yoshida 2014-06-10 14:54:26 UTC
*** Bug 79870 has been marked as a duplicate of this bug. ***
Comment 12 m.a.riosv 2014-06-11 22:11:14 UTC
*** Bug 79870 has been marked as a duplicate of this bug. ***
Comment 13 Maxim Monastirsky 2014-07-03 14:21:24 UTC
*** Bug 80499 has been marked as a duplicate of this bug. ***
Comment 14 Urmas 2014-07-26 18:55:44 UTC
*** Bug 81791 has been marked as a duplicate of this bug. ***