fdo#78927: Use different XML attribute names for asian and complex fonts.

Change-Id: I96a26bd495d6a78fffd0854b5084f69b5db84ee6